# collection

./: 1.f134dc29.async.js  1.js  2.4ac28c94.async.js  2.cc008520.async.js  2.js  README.md  index.html  umi.01b94097.js  umi.40f3be11.js  umi.4d99b07d.js  umi.74c660f7.css  umi.7edfd57c.css  umi.be3f1dcb.css  umi.css  umi.de975f45.css  umi.e3097994.js  umi.e5229dab.js  umi.fd35a315.js  umi.js
doc/: index.html  modules.html
doc/assets/: highlight.css  search.js
doc/classes/: AccountType.html  CloseAccountInstructionArgs.html  CollectionAccountData.html  CollectionIndexAccountData.html  CreateCollectionArgs.html
doc/enums/: CollectionInstructionType.html
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
program/tests/: helpers.rs  libs.rs
web/: .umirc.ts  package.json
web/src/: global.less
web/src/actions/: collection.ts  index.ts  nft.ts
web/src/components/AppBar/: index.tsx
web/src/components/ArtItem/: index.less  index.tsx
web/src/components/CollectionItem/: index.less  index.tsx
web/src/components/Settings/: index.tsx
web/src/contexts/: network.tsx
web/src/hooks/: index.tsx  useArt.tsx  useCollections.tsx  useNFT.tsx
web/src/layouts/: Basic.tsx  index.less
web/src/models/: collection.ts
web/src/pages/collection/: index.less  index.tsx
web/src/pages/collections/: index.less  index.tsx
web/src/pages/create/: index.tsx
web/src/pages/home/: Item.tsx  index.less  index.tsx
web/src/utils/: index.ts
