cargo-features = ["edition2021"]
[package]
name = "collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.2"
borsh = "0.9.1"
thiserror = "1.0"
num-derive = "0.3.3" 
num-traits = "0.2.14"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.9.2" 
solana-sdk = "1.9.2" 
spl-associated-token-account = "1.0.3" 
base64 = "0.20.0-alpha.1"
base58 = "0.2.0"

[lib]
crate-type = ["cdylib", "lib"]
