#cargo-features = ["edition2021"]
[package]
name = "collection"
description = "A collection protocol for the Token program on the Solana blockchain."
version = "0.1.1"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.11"
borsh = "0.9.1"
thiserror = "1.0"
num-derive = "0.3.3" 
num-traits = "0.2.14"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.7.0" 
solana-sdk = "1.7.0" 
spl-associated-token-account = "1.0.3" 

[lib]
crate-type = ["cdylib", "lib"]
